--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -169,19 +169,19 @@ jobs:
         uses: appleboy/scp-action@master
       # Передаём параметры для action appleboy/scp-action:
         with:
-          host: "158.160.16.110"
-          username: yc-user
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: JlOv3bJ-5z
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: "docker-compose.production.yml"
           target: "taski"
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
-          host: "158.160.16.110"
-          username: yc-user
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: JlOv3bJ-5z
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           # Параметр script передаёт в action appleboy/ssh-action команды,
           # которые нужно выполнить на сервере, 
           # с которым установлено соединение
